--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "The Sea At Night Syntax Theme",
+  "name": "the-sea-at-night-syntax",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "The name says it all",
